--- a/public/stylus/index.styl
+++ b/public/stylus/index.styl
@@ -169,3 +169,99 @@ body
             width 210px
             height 210px
             margin 10px
+  .footer
+    width 100%
+    .service
+      width 1200px
+      height 147px
+      margin 0 auto
+      .service-top
+        width 1200px
+        text-align center
+        h2
+          font-size 30px
+          font-family "微软雅黑"
+          font-weight 800
+          color #3d3838
+          margin-top 20px
+          margin-bottom 10px
+          span
+            color red
+            margin 0 -10px 0 -10px
+        p
+          display block
+          font-size 22px
+          color #3d3838
+      .service-bottom
+        .service-lists
+          display flex
+          margin-left 40px
+          justify-content center
+          li
+            margin 10px 40px 0 0
+            img
+              margin-right 10px
+              vertical-align middle
+    .city
+      width 100%
+      height 170px
+      .hot-city
+        width 1200px
+        margin 0 auto
+        span
+          float left
+          font-weight bold
+          font-size 18px
+        .many-city
+          display flex
+          flex-wrap wrap
+          margin-left 30px
+          width 1090px
+          line-height 30px
+          float left
+          a
+            color #333
+            width 98.1px
+            height 29.6px
+            line-height 29.6px
+            text-align center
+    .partner
+      width 1200px
+      margin 0 auto
+      background lightgray
+      padding-top 30px
+      p
+        text-align left
+        font-weight bold
+        color #1d1515
+        font-size 18px
+      .business
+        width 1200px
+        height 200px
+        margin 0 auto
+        display flex
+        flex-wrap wrap
+        justify-content center
+        text-align center
+        li
+          width 120px
+          height 60px
+          background white
+          margin 12px 0 0 12px
+          img
+            width 100px
+            height 47.36px
+            line-height 47.36px
+            margin-top 5px
+        .business-right
+          margin-right 6px
+      .copyright
+        text-align start
+        margin-top -30px
+        width 1200px
+        height 40px
+        span
+          color #898989
+          line-height 40px
+          padding-left 30px
+
